--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
     <head>
         <title>Tree</title>
-        <script src="../lib/deps/underscore-1.1.7.js"></script>
-        <script src="../lib/deps/jquery-1.7.1.js"></script>
-        <script src="../lib/deps/backbone-0.5.3.js"></script>
-        <script src="../lib/deps/jquery-ui-1.8.17.custom.min.js"></script>
-        <script src="../lib/deps/jquery.ui.nestedSortable.js"></script>
+        <script src="js/libs/require.js" data-main="js/main"></script>
 
-        <link rel="stylesheet" type="text/css" href="../lib/tree.css"></script>
+        <link rel="stylesheet" type="text/css" href="css/tree.css"></script>
+        <!--
         <script src="../lib/tree_view.js"></script>
         <script src="../lib/tree.js"></script>
+        -->
 
         <!--<link rel="stylesheet" type="text/css" href="../../actionmenu/actionmenu.css"></script>-->
         <!--<script src="../../actionmenu/actionmenu.js"></script>-->
         <!--<script src="tree_action_item.js"></script>-->
 
 
+        <!--
         <script src="tree_mi.js"></script>
         <script src="tree_example.js"></script>
+        -->
     </head>
     <body>
         <h1>Testing</h1>
